# mcp-chatbot

./: .gitignore  README.md  c1.py  c12.py  client.py  instructions.txt  key.txt  main.py  payload.txt  pyproject.toml  requirements.txt  s1.py  s2.py  scccc.txt  server.py  serverupdated.py  serverupdated1.py  sev.py  tool_discovery.py
